--- a/src/styles/indie.module.css
+++ b/src/styles/indie.module.css
@@ -27,6 +27,10 @@
   font-size: 36px;
 }
 
+.chip {
+  margin-bottom: 12px;
+}
+
 .excerpt {
   font-size: 18px;
   font-weight: 700;
@@ -41,7 +45,9 @@
 .skills {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   opacity: 0.65;
+  margin-bottom: 10px;
 }
 
 .skills > div {
@@ -50,6 +56,11 @@
 
 .skills i {
   font-size: 24px;
+}
+
+.divider {
+  width: 100%;
+  size: 1;
 }
 
 .back {
