--- a/src/styles/indie.module.css
+++ b/src/styles/indie.module.css
@@ -131,6 +131,22 @@
   margin-bottom: 10px;
 }
 
+.iframeWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  margin-bottom: 2rem;
+}
+
+.iframeWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media (prefers-color-scheme: dark) {
   .code {
     background-color: rgb(15, 8, 28);
