--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 20px;
+  padding: 0 20px 80px 20px;
   max-width: 700px;
   margin: 0 auto;
   line-height: 1.5;
@@ -35,7 +35,6 @@
 .back {
   display: inline-block;
   margin-top: 60px;
-  margin-bottom: 120px;
 }
 
 .bold {
