--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -14,6 +14,27 @@
   line-height: 1.5;
 }
 
+.accounts {
+  display: flex;
+}
+
+.accounts > div {
+  margin-right: 10px;
+}
+
+.accounts a {
+  color: inherit;
+}
+
+.accounts i {
+  font-size: 30px;
+}
+
+.accounts i:hover {
+  color: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
 .menu {
   display: flex;
   justify-content: space-evenly;
