--- a/src/styles/indie.module.css
+++ b/src/styles/indie.module.css
@@ -6,6 +6,10 @@
   min-height: calc(100vh - 101px);
 }
 
+.container .content {
+  white-space: pre-wrap;
+}
+
 .container h1 {
   font-size: 32px;
 }
