--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -27,6 +27,21 @@
   opacity: 0.6;
 }
 
+.container blockquote {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 15px;
+  border-left: 2px solid black;
+  /* display:inline-flex; */
+}
+
+.container blockquote span {
+  margin-top:-10px;
+  margin-bottom:-10px;
+}
+
 .name {
   font-size: 36px;
 }
