--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,3 +36,11 @@ h1 {
   size: 1;
   margin: 0;
 }
+
+.container {
+  padding: 0 20px 80px 20px;
+  max-width: 700px;
+  margin: 0 auto;
+  line-height: 1.5;
+  min-height: calc(100vh - 101px);
+}
